spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_declarations.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: A previous declaration of x exists
  ┌─ testinput:2:10
  │
2 │     decl x, x;
  │          ^  ^ x was declared more than once
  │          │   
  │          Previously declared here


